# ROS-end-sem-project

./: .gitignore  Bluetooth.ino  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: ros2_controllers.yaml
launch/: locomotion.launch.py  snake_complete.launch.py  snake_control.launch.py  spawn_snake_gazebo.launch.py  spawn_snake_headless.launch.py
meshes/: 01_1.stl  02_1.stl  03_1.stl  04_1.stl  05_1.stl  06_1.stl  07_1.stl  08_1.stl  09_1.stl  10_1.stl  11_1.stl  12_1.stl  13_1.stl  14_1.stl  15_1.stl  16_1.stl  17_1.stl  18_1.stl  19_1.stl  20_1.stl  21_1.stl  22_1.stl  23_1.stl  24_1.stl  25_1.stl  26_1.stl  27_1.stl  28_1.stl  29_1.stl  30_1.stl  31_1.stl  32_1.stl  33_1.stl  base_link.stl  tail_1.stl
snake_robot/: snake_controller.py  snake_robot_node.py  snake_teleop.py
snake_robot/snake_robot/: snake_controller.py
src/: locomotion.py  snake_controller.py  snake_robot_node.cpp
urdf/: materials.xacro  snake.gazebo  snake.trans  snake.urdf.xacro  snake.xacro
worlds/: empty_world.world  snake_world.world
